--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title></title>
+<title>My firebase project</title>
 
 <link rel="stylesheet" href="https://js.arcgis.com/3.20/esri/css/esri.css">
 <script src="https://js.arcgis.com/3.20/"></script>
